      using SUPER::new() [#307].

    * Fix test for BSML SAX by using lax parser XML::SAX::PurePerl since
      the external DTD URL now 404s [#376].

    * Updated Bio::Tools::CodonTable for the latest version of NCBI
      genetic code table (version 4.9).  Previously, version 4.2 was
      being used.  This update changes codon tables 3, 15, 24, 27-30,
      32, and 33 [#389, #391].

1.7.8     2021-02-02 23:02:18-06:00 America/Chicago
    * Bio::SeqIO::interpro has been moved to a separate repository to
      deal with issues with XML::DOM::XPath bitrot [#347]
    * Pull requests:
      * Adjust Swiss-Prot FT A..B lines [#348] from @smoe
      * Update %FTQUAL_NO_QUOTE: List of qualifiers without quote [#339] from
        @hdevillers

1.7.7     2019-12-07 13:41:36-06:00 America/Chicago

    * The program bp_chaos_plot has been removed.

    * GD is now no longer a dependency, suggestion or requirement.

    * #321 - GenBank format fix for un-quoted features, text wrapping

    * Bio::DB::Query::WebQuery now includes methods for delay(), delay_policy(),
      and a 'private' _sleep() function that mirror those from
      Bio::DB::WebDBSeqI, primarily for compliance with potential website
      restrictions for the number and frequency of queries (e.g. NCBI eUtils).

    * Fix bug #329, related to Bio::Tree::Statistics::transfer_bootstrap_expectation
      in last release.

1.7.6     2019-08-28 12:37:01+01:00 Europe/London

    * The program bp_classify_hits_kingdom has been removed and is
      now part of the examples documentation instead.

    * GD is now listed as a suggestion instead of a requirement.  The
      bp_chaos_plot program will now work with the GD module.

    * New method Bio::Tree::Statistics::transfer_bootstrap_expectation
      to compute Transfer Bootstrap Expectation (TBE) for internal
      nodes based on the methods outlined in Lemoine et al, Nature,
      2018.

    * New method Bio::SeqIO::fasta::next_seq_fast to retrieve next